# advent-of-code

./: .gitignore  LICENCE  README.md  fetch-input  pyproject.toml  run  setup  touch
2015/: day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-06.py  day-07.py
2021/: day-02.py  day-05.py  day-06.py  day-07.py  day-09.py  day-10.py  day-13.py  day-14.py  day-15.py  day-16.py  day-17.py  day-18.py  day-19.py  day-20.py  day-21.py  day-22.py  day-23.py  day-24.py  day-25.py  input-24-notes.txt  pyproject.toml
2021/src/: aoc.py  aoc_common.py  day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-06.py  day-07.py  day-08.py  day-09.py  day-10.py  day-11.py  day-12.py  day-13.py  day-14.py  new  run
2022/: day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-06.py  day-07.py  day-08.py  day-09.py  day-10.py  day-11.py  day-12.py  day-13.py  day-14.py  day-15.py  day-16.py
2022/input/: 16.txt
2023/: day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-06.py  day-07.py
2024/: day-01.py  day-02.py  day-03.py  day-04.py
side/: 2021-24.py  scratch.py
