[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "virtualenv for aoc"
authors = ["Don Patterson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
pyqt5 = "^5.15.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
